# costdog

./: .gitignore  CLAUDE.md  README.md  package-dist.bat  package-lock.json  package.json  start.bat
.github/workflows/: build.yml  ci.yml
docs/: PRODUCT_PLAN.md
scripts/: generate-icons.js
src/: aggregator.ts  types.ts
src-tauri/: Cargo.toml  index.html  scan.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/embedded/: index.html
src-tauri/src/: lib.rs  main.rs
src/cli/: index.ts
src/db/: schema.ts
src/mini-dashboard/: index.html
src/parsers/: claude-code.ts  codex.ts
src/utils/: paths.ts  pricing.ts
src/web/: server.ts
src/web/public/: index.html
