[package]
name = "costdog"
version = "0.1.2"
edition = "2021"

[lib]
name = "costdog_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
chrono = "0.4"
